--- a/.github/workflows/discord-message.yml
+++ b/.github/workflows/discord-message.yml
@@ -12,8 +12,64 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Discord Webhook Action
-        uses: Ilshidur/discord-webhook@master
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        with:
-          args: "github-action-test"
+        run: |
+                  # GitHub Actions ?? ? ?? ?? ??? ????
+                  BRANCH_NAME="${{ github.ref }}"
+                  WORKFLOW_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                  COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+                  TIMESTAMP=$(date -u +%Y-%m-%dT%H:%M:%SZ)
+
+                  # JSON Payload ??
+                  DATA=$(cat <<EOF
+                  {
+                    "username": "??? ????",
+                    "avatar_url": "https://i.namu.wiki/i/X6s5AIfkjae-h54b7EkMYVg7ityFni1B-YIhtck0g6P914sJTsjykJDEbrsoZdV8rmwmrcyioAH3d2CxLmjxLx20dpHZI1izwMjfs7Dvtuchchyt2HDu7iQyy02_QaU6b8RrxWBt4G0PMQ0IZTykpQ.webp",
+                    "embeds": [
+                      {
+                        "title": "??? ?????~",
+                        "type": "rich",
+                        "color": 123456,
+                        "author": {
+                          "name": "???",
+                          "icon_url": "https://i.namu.wiki/i/X6s5AIfkjae-h54b7EkMYVg7ityFni1B-YIhtck0g6P914sJTsjykJDEbrsoZdV8rmwmrcyioAH3d2CxLmjxLx20dpHZI1izwMjfs7Dvtuchchyt2HDu7iQyy02_QaU6b8RrxWBt4G0PMQ0IZTykpQ.webp"
+                        },
+                        "fields": [
+                          {
+                            "name": "?? ???",
+                            "value": "$COMMIT_MESSAGE",
+                            "inline": false
+                          },
+                          {
+                            "name": "???",
+                            "value": "$BRANCH_NAME",
+                            "inline": true
+                          },
+                          {
+                            "name": "?? ??",
+                            "value": "`Dev`",
+                            "inline": true
+                          },
+                          {
+                            "name": "GitHub Actions",
+                            "value": "[?? ????? ?? ??]($WORKFLOW_URL)",
+                            "inline": false
+                          }
+                        ],
+                        "footer": {
+                          "text": "?? ??",
+                          "icon_url": "https://cdn-icons-png.flaticon.com/512/25/25231.png"
+                        },
+                        "timestamp": "$TIMESTAMP"
+                      }
+                    ]
+                  }
+                  EOF
+                  )
+
+                  # JSON ??? ?? (??? ??)
+                  echo "===== JSON PAYLOAD ====="
+                  echo "$DATA"
+                  echo "========================"
+
+                  # Discord Webhook ??
+                  curl -X POST -H "Content-Type: application/json" -d "$DATA" "${{ secrets.DISCORD_WEBHOOK_URL }}"
