--- a/.github/workflows/discord-message.yml
+++ b/.github/workflows/discord-message.yml
@@ -17,7 +17,7 @@ jobs:
           BRANCH_NAME: ${{ github.ref }}
           WORKFLOW_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           COMMIT_MESSAGE: $(git log -1 --pretty=%B)
-          TIMESTAMP: $(date -u +%Y-%m-%dT%H:%M:%SZ)
+          TIMESTAMP: ${{ github.event.created_at }}
         run: |
                   # JSON Payload ??
                   DATA=$(cat <<EOF
