--- a/.github/workflows/discord-message.yml
+++ b/.github/workflows/discord-message.yml
@@ -11,14 +11,14 @@ jobs:
   send-message:
     runs-on: ubuntu-latest
     steps:
-      - name: 디스코드에 필요한 환경 변수 설정
-        run: |
-          echo "BRANCH_NAME=${{ github.ref_name }}" >> $GITHUB_ENV
-          echo "COMMIT_MESSAGE=${{ github.event.head_commit.message }}" >> $GITHUB_ENV
-          echo "TIMESTAMP=${{ github.event.repository.updated_at }}" >> $GITHUB_ENV
-          echo "WORKFLOW_URL=${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" >> $GITHUB_ENV
 
       - name: 디스코드 알림 보내기
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+          BRANCH_NAME: ${{ github.event.head_ref }}
+          WORKFLOW_URL: ${{ github.event.workflow_url }}
+          TIMESTAMP: ${{ github.event.repository.updated_at }}
         run: |
                   # JSON Payload 생성
                   DATA=$(cat <<EOF
@@ -94,4 +94,4 @@ jobs:
                   echo "========================"
 
                   # Discord Webhook 호출
-                  curl -X POST -H "Content-Type: application/json" -d "$DATA" "${{ secrets.DISCORD_WEBHOOK_URL }}"
+                  curl -X POST -H "Content-Type: application/json" -d "$DATA" "$DISCORD_WEBHOOK_URL"
