--- a/.github/workflows/discord-message.yml
+++ b/.github/workflows/discord-message.yml
@@ -18,8 +18,10 @@ jobs:
           COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
           BRANCH_NAME: ${{ github.ref_name }}
           WORKFLOW_URL: ${{ github.event.workflow_url }}
-          TIMESTAMP: ${{ github.event.repository.updated_at }}
+#          TIMESTAMP: ${{ github.event.repository.updated_at }}
         run: |
+                  # 현재 시간
+                  TIMESTAMP=$(TZ='Asia/Seoul' date +%s)
                   # JSON Payload 생성
                   DATA=$(cat <<EOF
                   {
