--- a/.github/workflows/discord-message.yml
+++ b/.github/workflows/discord-message.yml
@@ -4,21 +4,23 @@ on:
   push:
       branches:
         - main
-env:
-  DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
 
 jobs:
   send-message:
     runs-on: ubuntu-latest
     steps:
+      - name: GitHub 에서 레포 받아오기
+        uses: actions/checkout@v3
+
+      - name: 디스코드 환경변수 설정
+        run: |
+          echo "DISCORD_WEBHOOK_URL=${{ secrets.DISCORD_WEBHOOK_URL }}" >> $GITHUB_ENV
+          echo "COMMIT_MESSAGE=$(echo "${{ github.event.head_commit.message }}" | tr '\n' ' ')" >> $GITHUB_ENV
+          echo "BRANCH_NAME=${{ github.ref_name }}" >> $GITHUB_ENV
+          echo "WORKFLOW_URL=${{ github.event.workflow_url }}" >> $GITHUB_ENV
+          echo "TIMESTAMP=${{ github.event.repository.updated_at }}" >> $GITHUB_ENV
 
       - name: 디스코드 알림 보내기
-        env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-          BRANCH_NAME: ${{ github.ref_name }}
-          WORKFLOW_URL: ${{ github.event.workflow_url }}
-          TIMESTAMP: ${{ github.event.repository.updated_at }}
         run: |
           # JSON Payload 생성
           DATA=$(cat <<EOF
