--- a/.github/workflows/discord-message.yml
+++ b/.github/workflows/discord-message.yml
@@ -19,7 +19,7 @@ jobs:
           BRANCH_NAME: ${{ github.ref_name }}
           WORKFLOW_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
           TIMESTAMP: ${{ github.event.repository.updated_at }}
-          ENVIRONMENT: main
+          ENVIRONMENT: ${{ inputs.environment }}
         run: |
           COMMIT_MESSAGE=$(echo "$COMMIT_MESSAGE" | sed ':a;N;$!ba;s/\n/\\n/g')
 
@@ -30,13 +30,13 @@ jobs:
             "avatar_url": "https://i.namu.wiki/i/X6s5AIfkjae-h54b7EkMYVg7ityFni1B-YIhtck0g6P914sJTsjykJDEbrsoZdV8rmwmrcyioAH3d2CxLmjxLx20dpHZI1izwMjfs7Dvtuchchyt2HDu7iQyy02_QaU6b8RrxWBt4G0PMQ0IZTykpQ.webp",
             "embeds": [
               {
-                "title": "🎉🎉배포가 성공했어요~!🎉🎉",
-                "description" : "배포 알림이 도착했어요~",
+                "title": "🎉🎉배포가 성공했다~🎉🎉",
+                "description" : "얼른 일해라~",
                 "type": "rich",
                 "color": 123456,
                 "author": {
-                  "name": "칠가이",
-                  "icon_url": "https://i.namu.wiki/i/X6s5AIfkjae-h54b7EkMYVg7ityFni1B-YIhtck0g6P914sJTsjykJDEbrsoZdV8rmwmrcyioAH3d2CxLmjxLx20dpHZI1izwMjfs7Dvtuchchyt2HDu7iQyy02_QaU6b8RrxWBt4G0PMQ0IZTykpQ.webp"
+                  "name": "나명환 교수님",
+                  "icon_url": "https://stat.jnu.ac.kr/upload/profInfo/1400527816183_1.jpg"
                 },
                 "fields": [
                   {
