--- a/.github/workflows/condition-deploy.yml
+++ b/.github/workflows/condition-deploy.yml
@@ -13,10 +13,11 @@ jobs:
               uses: actions/checkout@v3
 
             - name: a 폴더가 변경될 때
-              if: contains(github.event.head_commit.modified, 'a/') || contains(github.event.head_commit.added, 'a/') ||
-                  contains(github.event.head_commit.removed, 'a/')
+#              if: contains(github.event.head_commit.modified, 'a/') || contains(github.event.head_commit.added, 'a/') ||
+#                  contains(github.event.head_commit.removed, 'a/')
               run: |
                 echo "a 폴더가 변경 됨"
+                echo toJson(${{ github.event.head_commit.modified }})
 
             - name: b 폴더가 변경될 때
               if: contains(github.event.head_commit.modified, 'b/') || contains(github.event.head_commit.added, 'b/') ||
