--- a/.github/workflows/condition-deploy.yml
+++ b/.github/workflows/condition-deploy.yml
@@ -18,6 +18,8 @@ jobs:
               run: |
                 echo "a 폴더가 변경 됨"
                 echo ${{ github.event.head_commit.modified }}
+                echo CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+                echo "Changed files: $CHANGED_FILES"
 
             - name: b 폴더가 변경될 때
               if: contains(github.event.head_commit.modified, 'b/') || contains(github.event.head_commit.added, 'b/') ||
