refactor: git diff 출력

--- a/.github/workflows/condition-deploy.yml
+++ b/.github/workflows/condition-deploy.yml
@@ -30,3 +30,9 @@ jobs:
             - name: 헤드 커밋 출력
               run: |
                 echo '${{ toJson(github.event.head_commit) }}'
+
+            - name: git diff
+              run: |
+                CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }})
+                echo "Changed files: $CHANGED_FILES"
+                echo "files=$CHANGED_FILES" >> $GITHUB_ENV
