--- a/.github/workflows/condition-deploy.yml
+++ b/.github/workflows/condition-deploy.yml
@@ -30,16 +30,7 @@ jobs:
             - name: 헤드 커밋 출력
               run: |
                 echo '${{ toJson(github.event.head_commit) }}'
-                
-            - name: github api로 변경된 파일 가져오기
-              run: |
-                CHANGED_FILES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                -H "Accept: application/vnd.github.v3+json" \
-                "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files" \
-                | jq -r '.[].filename')
-
-                 echo "Changed files: $CHANGED_FILES"
-                echo "files=$CHANGED_FILES" >> $GITHUB_ENV
+              
 
             - name: git diff
               run: |
@@ -47,6 +38,34 @@ jobs:
                 echo "Changed files: $CHANGED_FILES"
                 echo "files=$CHANGED_FILES" >> $GITHUB_ENV
 
-              
 
+jobs:
+  check-pr-changes:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get PR changed files
+        run: |
+          PR_NUMBER="${{ github.event.pull_request.number }}"
+          if [ -z "$PR_NUMBER" ]; then
+            echo "Pull Request number is missing!"
+            exit 1
+          fi
 
+          API_URL="https://api.github.com/repos/${{ github.repository }}/pulls/$PR_NUMBER/files"
+          
+          echo "Fetching changed files from: $API_URL"
+          CHANGED_FILES=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "$API_URL")
+
+          echo "GitHub API Response: $CHANGED_FILES"
+          
+          FILE_LIST=$(echo "$CHANGED_FILES" | jq -r '.[].filename')
+
+          if [ -z "$FILE_LIST" ]; then
+            echo "No changed files found."
+            exit 0
+          fi
+
+          echo "Changed files: $FILE_LIST"
+          echo "files=$FILE_LIST" >> $GITHUB_ENV
